# c64-Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.txt
debug/: ciaout.c  memoryOut.c  vicOut.c
inc/: characters.h  cia.h  cpu6510.h  cpuCnt.h  cpu_cnt.h  cpurunner.h  dino.h  functions.h  games.h  keymap.h  main.h  mainWin.h  opcodes.h  progloader.h  prom.h  saveMemory.h  testcase.h  vic.h
main/: functions.c  illegal_opcode.c  main.c  mainWin.c  progloadr.c
opcodes/: functions.c  illegal_opcode.c  opcode_0x.c  opcode_1x.c  opcode_2x.c  opcode_3x.c  opcode_4x.c  opcode_5x.c  opcode_6x.c  opcode_7x.c  opcode_8x.c  opcode_9x.c  opcode_ax.c  opcode_bx.c  opcode_cx.c  opcode_dx.c  opcode_ex.c  opcode_fx.c
peripherie/: cia.c  cpurunner.c  keyboard.c  vic.c
test/: adc_test.c  branch_test.c  cmp_test.c  dec_test.c  inc_test.c  load_test.c  sbc_test.c  store_test.c
